[tool.poetry]
name = "transaction-api"
version = "0.1.0"
description = ""
authors = ["Oleksii Petrenko <oleksii_petrenko@epam.com>"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 110
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pymongo = "^4.10.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.2"
uvicorn = "^0.32.1"
pytest = "^8.3.4"
tox = "^4.23.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
